--- a/html/home.html
+++ b/html/home.html
@@ -126,7 +126,7 @@
 	</header>
 	<main>
 		<section>
-			<div id="category" class="container">
+			<div id="category" class="container" style="padding-top:7em">
 				<div class="wrap four-icon">
 					<div class="row">
 						<div class="col-md-3 col-sm-2 col-6 col-xs-5">
