--- a/html/checkout.html
+++ b/html/checkout.html
@@ -215,7 +215,7 @@
                     </div>
     
                     <div class="col col-md-3">
-                        <h2>NEW&EVENT</h2>
+                        <h2>EVENT</h2>
                         <ul>
                             <li><a href="#">Tin hoạt động</a></li>
                             <li><a href="#">Mẹo vặt</a></li>
