--- a/html/blog.html
+++ b/html/blog.html
@@ -38,17 +38,14 @@
   <!-- header -->
     <header>
         <nav class="navbar navbar-expand-md bg-white fixed-top" id="header">
-            <a class="logo navbar-brand px-5" href="/"><img id="logo" src="img/rsz_logo.png"></a>
+            <a class="logo navbar-brand px-2 " href="/"><img id="logo" src="img/rsz_logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" style="background: #E99FB6;">
                 <span class="navbar-toggler-icon">☰</span>
             </button>
-            <div class="menu collapse navbar-collapse" id="collapsibleNavbar">
+            <div class="menu collapse navbar-collapse px-5" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="home">TRANG CHỦ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="blog">GIỚI THIỆU</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="shop-homepage">CỬA HÀNG</a>
@@ -100,24 +97,22 @@
     </header>
 
   <!-- Danh muc-->
-    <div class="container" style="padding-top: 10rem; background-color: white;">
+    <div class="container" style="padding-top: 8rem; background-color: transparent;">
         <div class="row" style="padding-top: 1rem">
             <div class="col-sm-3 sidenav" style="background-color: white;">
                     <h4>Mochi Blog</h4>
-                    <!-- <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a href="#section1">Home</a></li>
-                        <li><a href="#section2">Friends</a></li>
-                        <li><a href="#section3">Family</a></li>
-                        <li><a href="#section3">Photos</a></li>
-                    </ul><br> -->
-                    <!-- <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search Blog..">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
-                    </div> -->
+                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+                      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                    </div>
+                    <div class="tab-content" id="v-pills-tabContent">
+                      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">...</div>
+                      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
+                      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
+                      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
+                    </div>
             </div>
             <div class="col-sm-9">
                     <h4><small>RECENT POSTS</small></h4>
@@ -245,7 +240,7 @@
           </div>
 
           <div class="col col-md-3">
-            <h3>NEW&EVENT</h3>
+            <h3>EVENT</h3>
             <ul>
               <li><a href="home">Tin hoạt động</a></li>
               <li><a href="home">Mẹo vặt</a></li>
