--- a/html/home.html
+++ b/html/home.html
@@ -340,7 +340,7 @@
 						<div class="col-md-3 col-sm-2 col-6 col-xs-5">
 							<div class="blogger">
 								<a title="Blogger Image" href="#">
-									<img src="img/ICON-01.png">
+									<img src="img/Huy1.jpg">
 								</a>
 								<div class="info">
 									<a title="Name" href="home">ĐÂY LÀ BÚT
@@ -353,7 +353,7 @@
 						<div class="col-md-3 col-sm-2 col-6 col-xs-7">
 							<div class="blogger">
 								<a title="Blogger Image" href="#">
-									<img src="img/ICON-01.png">
+									<img src="img/Huong.jpg">
 								</a>
 								<div class="info">
 									<a title="Name" href="#">ĐÂY LÀ BÚT
@@ -366,7 +366,7 @@
 						<div class="col-md-3 col-sm-2 col-6 col-xs-5">
 							<div class="blogger">
 								<a title="Blogger Image" href="#">
-									<img src="img/ICON-01.png">
+									<img src="img/An.jpg">
 								</a>
 								<div class="info">
 									<a title="Name" href="#">ĐÂY LÀ BÚT
