--- a/html/home.html
+++ b/html/home.html
@@ -340,12 +340,13 @@
 						<div class="col-md-3 col-sm-2 col-6 col-xs-7">
 							<div class="blogger">
 								<a title="Blogger Image" href="#">
-									<img src="img/Da.jpg">
+									<img src="img/da1.jpg">
 								</a>
 								<div class="info">
-									<a title="Name" href="#">ĐÂY LÀ BÚT
-									</a>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+									<a title="Name" href="#">Trần Linh Đa
+									</a><br>
+									<span>MSSV: 19521305</span> <br>
+									<span>Mochi-team: front-end</span>
 								</div>
 							</div>
 						</div>
@@ -355,9 +356,10 @@
 									<img src="img/Huy1.jpg">
 								</a>
 								<div class="info">
-									<a title="Name" href="home">ĐÂY LÀ BÚT
-									</a>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+									<a title="Name" href="home">Lê Hữu Huy
+									</a><br>
+									<span>MSSV: 19521615</span> <br>
+									<span>Mochi-team: back-end</span>
 								</div>
 							</div>
 						</div>
@@ -368,9 +370,10 @@
 									<img src="img/Huong.jpg">
 								</a>
 								<div class="info">
-									<a title="Name" href="#">ĐÂY LÀ BÚT
-									</a>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+									<a title="Name" href="#">Nguyễn Thị Viết Hương
+									</a><br>
+									<span>MSSV: 1952595</span> <br>
+									<span>Mochi-team: back-end</span>
 								</div>
 							</div>
 						</div>
@@ -381,9 +384,10 @@
 									<img src="img/An.jpg">
 								</a>
 								<div class="info">
-									<a title="Name" href="#">ĐÂY LÀ BÚT
-									</a>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+									<a title="Name" href="#">Lê Thị Xuân An
+									</a><br>
+									<span>MSSV: 19521177</span> <br>
+									<span>Mochi-team: front-end</span>
 								</div>
 							</div>
 						</div>
