--- a/html/blog.html
+++ b/html/blog.html
@@ -31,164 +31,173 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.js"></script>
 
-</head> 
+</head>
 
 <body>
 
   <!-- header -->
-    <header>
-        <nav class="navbar navbar-expand-md bg-white fixed-top" id="header">
-            <a class="logo navbar-brand px-2 " href="/"><img id="logo" src="img/rsz_logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" style="background: #E99FB6;">
-                <span class="navbar-toggler-icon">☰</span>
-            </button>
-            <div class="menu collapse navbar-collapse px-5" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="home">TRANG CHỦ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="shop-homepage">CỬA HÀNG</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link" href="blog">TIN TỨC</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact">LIÊN HỆ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="shop-cart" id="navBtnCart">
-                      <i class="fa fa-shopping-cart" aria-hidden="true" style="position: relative;">
-                        <div class="number" id="number"></div>
-                      </i>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="login" id="navBtnLogIn">ĐĂNG NHẬP</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sign_up" id="navBtnSignUp">ĐĂNG KÝ</a>
-                  </li>
-                  <!-- <li class="nav-item">
+  <header>
+    <nav class="navbar navbar-expand-md bg-white fixed-top" id="header">
+      <a class="logo navbar-brand px-2 " href="/"><img id="logo" src="img/rsz_logo.png" style="margin-left: 3em;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+        style="background: #E99FB6;">
+        <span class="navbar-toggler-icon">☰</span>
+      </button>
+      <div class="menu collapse navbar-collapse px-5" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="home">TRANG CHỦ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="shop-homepage">CỬA HÀNG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog">TIN TỨC</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact">LIÊN HỆ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="shop-cart" id="navBtnCart">
+              <i class="fa fa-shopping-cart" aria-hidden="true" style="position: relative;">
+                <div class="number" id="number"></div>
+              </i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login" id="navBtnLogIn">ĐĂNG NHẬP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sign_up" id="navBtnSignUp">ĐĂNG KÝ</a>
+          </li>
+          <!-- <li class="nav-item">
                   		        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                   		      </li> -->
-                  
-                  <li class="nav-item" id="navBtnAvatar1">
-                    <div class="dropdown">
-                      <img class=" rounded-circle btn p-0 dropdown-toggle" id="navBtnAvatar" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" src="img/no_user.png" width="36" height="36">
-                      </img>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: -590%;">
-                        <a class="dropdown-item" href="profile">
-                          Thông tin cá nhân
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#" onclick="logOutOnClick()">
-                          Đăng xuất
-                        </a>
-                      </div>
-                    </div>
-                  </li>
+
+          <li class="nav-item" id="navBtnAvatar1">
+            <div class="dropdown">
+              <img class=" rounded-circle btn p-0 dropdown-toggle" id="navBtnAvatar" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false" src="img/no_user.png" width="36" height="36">
+              </img>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: -590%;">
+                <a class="dropdown-item" href="profile">
+                  Thông tin cá nhân
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="logOutOnClick()">
+                  Đăng xuất
+                </a>
+              </div>
+            </div>
+          </li>
 
 
-                </ul>
-          </div>  
-        </nav>
-    </header>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
   <!-- Danh muc-->
-    <div class="container" style="padding-top: 8rem; background-color: transparent;">
-        <div class="row" style="padding-top: 1rem">
-            <div class="col-sm-3 sidenav" style="background-color: white;">
-                    <h4>Mochi Blog</h4>
-                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
-                      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
-                      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-                      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
-                    </div>
-                    <div class="tab-content" id="v-pills-tabContent">
-                      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">...</div>
-                      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
-                      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
-                      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
-                    </div>
-            </div>
-            <div class="col-sm-9">
-                    <h4><small>RECENT POSTS</small></h4>
-                    <hr>
-                    <h2>I Love Food</h2>
-                    <h5></span> Post by Jane Dane, Sep 27, 2015.</h5>
-                    <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
-                    <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <br><br>
-                    <img src="img\but15.jpg">
-                    <h4><small>RECENT POSTS</small></h4>
-                    <hr>
-                    <h2>Officially Blogging</h2>
-                    <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
-                    <h5><span class="label label-success">Lorem</span></h5><br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                        officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <hr>
-                    <img src="img\but12.jpg" style="height: 500px;width: 600px;">
-
-                    <h4>Leave a Comment:</h4>
-                    <form role="form">
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-success">Submit</button>
-                    </form>
-                    <br><br>
-
-                    <p><span class="badge">2</span> Comments:</p><br>
-
-                    <div class="row">
-                        <div class="img\14.jpger">
-                            <img src="img\but9.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-                        </div>
-                        <div class="col-sm-10">
-                            <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
-                            <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            <br>
-                        </div>
-                        <div class="col-sm-2 text-center">
-                            <img src="img\but10.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-                        </div>
-                        <div class="col-sm-10">
-                            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
-                            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua.</p>
-                            <br>
-                            <p><span class="badge">1</span> Comment:</p><br>
-                            <div class="row">
-                                <div class="col-sm-2 text-center">
-                                    <img src="img\but5.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-                                </div>
-                                <div class="col-xs-10">
-                                    <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
-                                    <p>Me too! WOW!</p>
-                                    <br>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-            </div>
+  <div class="container" style="padding-top: 8rem; background-color: transparent;">
+    <div class="row" style="padding-top: 1rem">
+      <div class="col-sm-3 sidenav" style="background-color: white;">
+        <h4>Mochi Blog</h4>
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+          <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
+            aria-controls="v-pills-home" aria-selected="true">Home</a>
+          <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
+            aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+          <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
+            aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+          <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab"
+            aria-controls="v-pills-settings" aria-selected="false">Settings</a>
         </div>
+        <div class="tab-content" id="v-pills-tabContent">
+          <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+            ...</div>
+          <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...
+          </div>
+          <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...
+          </div>
+          <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-9">
+        <h4><small>RECENT POSTS</small></h4>
+        <hr>
+        <h2>I Love Food</h2>
+        <h5></span> Post by Jane Dane, Sep 27, 2015.</h5>
+        <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
+        <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <br><br>
+        <img src="img\but15.jpg">
+        <h4><small>RECENT POSTS</small></h4>
+        <hr>
+        <h2>Officially Blogging</h2>
+        <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
+        <h5><span class="label label-success">Lorem</span></h5><br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+          officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <hr>
+        <img src="img\but12.jpg" style="height: 500px;width: 600px;">
+
+        <h4>Leave a Comment:</h4>
+        <form role="form">
+          <div class="form-group">
+            <textarea class="form-control" rows="3" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+        <br><br>
+
+        <p><span class="badge">2</span> Comments:</p><br>
+
+        <div class="row">
+          <div class="img\14.jpger">
+            <img src="img\but9.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+          </div>
+          <div class="col-sm-10">
+            <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
+            <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+          </div>
+          <div class="col-sm-2 text-center">
+            <img src="img\but10.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+          </div>
+          <div class="col-sm-10">
+            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
+            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua.</p>
+            <br>
+            <p><span class="badge">1</span> Comment:</p><br>
+            <div class="row">
+              <div class="col-sm-2 text-center">
+                <img src="img\but5.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+              </div>
+              <div class="col-xs-10">
+                <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
+                <p>Me too! WOW!</p>
+                <br>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  
+  </div>
+
   <!-- Footer -->
   <footer>
     <div id="foot">
@@ -277,7 +286,7 @@
   </footer>
   <script src="js/base.js"></script>
 
-  
+
   <script>
     window.onscroll = function () { scrollFunction() };
     function scrollFunction() {
