--- a/html/checkout.html
+++ b/html/checkout.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
+<!--  -->
+<!--  -->
+<!-- Giao diện thanh toán -->
+<!--  -->
+<!--  -->
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Ogani Template">
