--- a/html/shop-homepage.html
+++ b/html/shop-homepage.html
@@ -37,7 +37,7 @@
   <!-- header -->
   <header>
     <nav class="navbar navbar-expand-md bg-white fixed-top" id="header">
-      <a class="logo navbar-brand px-5 " href="/"><img id="logo" src="img/rsz_logo.png"></a>
+      <a class="logo navbar-brand px-5 " href="/"><img id="logo" src="/img/rsz_logo.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
         style="background: #E99FB6;">
         <span class="navbar-toggler-icon">☰</span>
@@ -45,19 +45,19 @@
       <div class="menu collapse navbar-collapse px-5" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="../home">TRANG CHỦ</a>
+            <a class="nav-link" href="/home">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../shop-homepage">CỬA HÀNG</a>
+            <a class="nav-link" href="/shop-homepage">CỬA HÀNG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../blog">TIN TỨC</a>
+            <a class="nav-link" href="/blog">TIN TỨC</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../contact">LIÊN HỆ</a>
+            <a class="nav-link" href="/contact">LIÊN HỆ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./shop-cart" id="navBtnCart">
+            <a class="nav-link" href="/shop-cart" id="navBtnCart">
               <i class="fa fa-shopping-cart" aria-hidden="true" style="position: relative;">
                 <div class="number" id="number"></div>
               </i>
