--- a/html/admin_home.html
+++ b/html/admin_home.html
@@ -48,6 +48,7 @@
             </button>
             <div class="menu collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
+
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/postItem">THÊM SẢN PHẨM</a>
                     </li>
@@ -93,12 +94,11 @@
 
                 <h1 class="my-4" style='font-size: 24pt;font-weight: 800;  color: #4c90e4; text-shadow: 0 0 3px #6ad2ec;'>Mochi</h1>
                 <div class="list-group">
-                    <a href="/admin/home/Bút" class="list-group-item">Bút các loại</a>
-                    <a href="/admin/home/Giấy note" class="list-group-item">Giấy note cute</a>
-                    <a href="/admin/home/Túi" class="list-group-item">Túi đựng giấy</a>
-                    <a href="/admin/home/Màu" class="list-group-item">Màu nước </a>
-                    <a href="/admin/home/Đồ thủ công" class="list-group-item">Đồ thủ công</a>
-                    <a href="/admin/home/Khác" class="list-group-item">Khác</a>
+                    <a href="/shop-homepage/Giấy note" class="list-group-item">Giấy note cute</a>
+                    <a href="/shop-homepage/Túi" class="list-group-item">Túi đựng giấy</a>
+                    <a href="/shop-homepage/Màu" class="list-group-item">Bút các loại</a>
+                    <a href="/shop-homepage/Đồ thủ công" class="list-group-item">Đồ thủ công</a>
+                    <a href="/shop-homepage/Khác" class="list-group-item">Khác</a>
                 </div>
 
             </div>
