--- a/html/shop-homepage.html
+++ b/html/shop-homepage.html
@@ -86,6 +86,55 @@
                 <a class="dropdown-item" href="#" onclick="logOutOnClick()">
                   Đăng xuất
                 </a>
+      <a class="logo navbar-brand px-5 " href="/"><img id="logo" src="../img/rsz_logo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" style="background: #E99FB6;">
+          <span class="navbar-toggler-icon">☰</span>
+      </button>
+      <div class="menu collapse navbar-collapse px-5" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../home">TRANG CHỦ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../shop-homepage">CỬA HÀNG</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="../blog">TIN TỨC</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="../contact">LIÊN HỆ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../shop-cart" id="navBtnCart">
+                <i class="fa fa-shopping-cart" aria-hidden="true" style="position: relative;">
+                  <div class="number" id="number"></div>
+                </i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login" id="navBtnLogIn">ĐĂNG NHẬP</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sign_up" id="navBtnSignUp">ĐĂNG KÝ</a>
+            </li>
+            <!-- <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                      </li> -->
+            
+            <li class="nav-item" id="navBtnAvatar1">
+              <div class="dropdown">
+                <img class=" rounded-circle btn p-0 dropdown-toggle" id="navBtnAvatar" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false" src="../img/no_user.png" width="36" height="36">
+                </img>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: -590%;">
+                  <a class="dropdown-item" href="profile">
+                    Thông tin cá nhân
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#" onclick="logOutOnClick()">
+                    Đăng xuất
+                  </a>
+                </div>
               </div>
             </div>
           </li>
@@ -107,10 +156,9 @@
 
         <h1 class="my-4">Danh mục</h1>
         <div class="list-group">
-          <a href="/shop-homepage/Bút" class="list-group-item">Bút các loại</a>
           <a href="/shop-homepage/Giấy note" class="list-group-item">Giấy note cute</a>
           <a href="/shop-homepage/Túi" class="list-group-item">Túi đựng giấy</a>
-          <a href="/shop-homepage/Màu" class="list-group-item">Màu nước </a>
+          <a href="/shop-homepage/Màu" class="list-group-item">Bút các loại</a>
           <a href="/shop-homepage/Đồ thủ công" class="list-group-item">Đồ thủ công</a>
           <a href="/shop-homepage/Khác" class="list-group-item">Khác</a>
         </div>
@@ -130,6 +178,10 @@
           <div id="list" class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <img class="d-block img-fluid" src="/images/banner3.PNG" alt="Third slide">
+
+            <div class="carousel-item active">             
+              <img class="d-block img-fluid" src="../images/banner3.PNG" alt="Third slide">              
+
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid"
@@ -137,7 +189,11 @@
                 alt="First slide">
             </div>
             <div class="carousel-item">
+
               <img class="d-block img-fluid" src="/images/banner2.PNG" alt="Second slide">
+
+              <img class="d-block img-fluid" src="../images/banner2.PNG" alt="Second slide">
+
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
