--- a/html/admin_updateItem.html
+++ b/html/admin_updateItem.html
@@ -30,7 +30,7 @@
 	<script defer src="/vendor/jquery/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<script defer src="/js/admin_base.js"></script>
-	<script defer src="/js/admin_postItem.js"></script>
+	<script defer src="/js/admin_updateItem.js"></script>
 
 </head>
 
@@ -94,7 +94,7 @@
 						</div>
 						<div class="col-md-12 col-lg-3 justify-content-between">
 							<button type="button" class="btn btn-primary ml-2" id="submit"
-								onclick=Submit()>ĐĂNG</button>
+								onclick=Submit()>Cập nhập</button>
 						</div>
 					</div>
 
