--- a/html/home.html
+++ b/html/home.html
@@ -195,7 +195,7 @@
 									<a href="shop-homepage"><button>BUY NOW</button></a>
 									
 								</div>
-								<a href="#"><img src="img/fl-1.png" alt=""></a>
+								<a href="shop-homepage"><img src="img/fl-1.png" alt=""></a>
 								
 								<!-- flash-sale khong doi img -->
 								<!--  -->
